drkns 2023-01-10 17:41:03+00:00 - build 207

1. gh-604 again.

drkns 2023-01-09 23:58:25+00:00 - build 206

1. gh-604: Process list plugin does not synchronize sort modes menu with sort order.

drkns 2022-10-31 17:38:11+00:00 - build 205

1. Continue 204.

drkns 2022-10-29 17:31:51+01:00 - build 204

1. More robust perf data read.

drkns 2021-11-14 18:48:42+00:00 - build 203

1. Move WMI refresh to a separate thread.

2. Fix other refresh-related issues.

drkns 2021-06-29 01:43:50+01:00 - build 202

1. Refresh the panel using ACTL_SYNCHRO.

drkns 2020-10-25 19:00:44+00:00 - build 201

1. An attempt to fix M#0003823 - performance counters can't be read on localised OS.

drkns 2020-09-20 01:27:58+01:00 - build 200

1. Various sort menu fixes and improvements.

2. Minor corrections.

drkns 2020-04-23 01:45:14+03:00 - build 199

1. Некорректное отображение имен некоторых хендлов.

drkns 2020-04-19 01:44:38+03:00 - build 198

1. Продолжение 197.

drkns 2020-04-18 18:47:55+03:00 - build 197

1. Рефакторинг. Том III. Используем fmt вместо printf.

drkns 2020-04-17 20:21:44+03:00 - build 196

1. Forum: Process List plugin does not show environment and command line
   x86 версия чудовищно работала в WOW64.

drkns 2020-04-17 03:04:16+03:00 - build 195

1. Добавлено получение командной строки через WMI.

drkns 2020-04-16 19:38:03+03:00 - build 194

1. В 193 отвалилось получение битности процессов.

2. Не работало отображение _Total.

drkns 2020-04-11 03:32:43+03:00 - build 193

1. Рефакторинг. Том II.

2. Ещё кое-где сняты ограничения на длину строк.

3. Поддержка float-форматирования размеров в стиле Far.

4. Исправлены баги, как новые, так и старые.

drkns 2020-04-01 23:49:29+03:00 - build 192

1. Рефакторинг. Том I.

2. Форматирование.

3. Во многих местах сняты ограничения на длину строк.

4. Не работало отображение хендлов.

5. Неправильно рассчитывался аптайм процессов.

6. Не работала индикация режима сортировки.

drkns 2020-03-25 10:32:35+02:00 - build 191
